# koe-tts

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  CONTINUATION.md  LICENSE  Makefile  README.md  TODO.md  continue-forge-module.md  forge-module-plan.md  labeler-architecture.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
configs/datasets/: common_voice.yaml  jsut.yaml  jvs.yaml  multi.yaml
configs/lakehouse/: bronze.yaml  gold.yaml  paths.yaml  silver.yaml
configs/training/: baseline.yaml  duration.yaml  vits.yaml  vits_core.yaml  vits_gan.yaml
data/: DATASETS.md
docs/: unity-catalog-deployment.md
docs/algorithms/: trim-optimizer.md
docs/architecture/: README.md  data-platform.md  staged-optimizer-rfc.md
docs/dashboard/: MONITOR_DESIGN.md
docs/lakehouse/: CONTRACT.md  NAS_MIGRATION.md  SEGMENTATION_LABELER.md
docs/papers/: README.md
docs/plans/: duckdb-unity-catalog-evaluation.md
docs/postmortems/: 2026-01-26_multi_vits_gan_20260126_041738_nan_collapse.md  2026-01-27_multi_vits_gan_resume27k_bsod_lost.md  2026-01-29_cuda_unknown_error_kvm.md  2026-01-29_multi_vits_gan_20260128_210613_grad_ceiling_emergency.md  2026-01-29_multi_vits_gan_calibrated_deescalation_bug.md  2026-01-29_poisoned_checkpoint_resumes.md  2026-01-30_multi_vits_gan_20260129_200158_clip_coef_feedback_loop.md  2026-01-30_multi_vits_gan_20260129_212937_mitigation_expiry_gap.md  2026-01-30_multi_vits_gan_20260130_095936_kl_explosion.md  2026-01-31_multi_vits_gan_20260130_222741_grad_cascade.md  2026-01-31_multi_vits_gan_20260131_115157_config_mapping_gap.md  2026-01-31_multi_vits_gan_20260131_123942_soft_limit_too_tight.md  2026-02-01_multi_vits_gan_20260201_101706_d_starvation.md  2026-02-02_multi_vits_gan_20260201_183758_observation_mode_collapse.md  README.md  gan_stability_log.md
docs/training/: GAN_CONTROLLER.md
image-generation/commons/: style.py
image-generation/trim_optimizer/: asymmetric_thresholds.py  capped_l1_loss.py  logistic_confidence.py
modules/: __init__.py
modules/dashboard/: __init__.py  backend.py
modules/dashboard/frontend/: index.html  package-lock.json  package.json  vite.config.ts
modules/data_engineering/: README.md  __init__.py
modules/data_engineering/bronze/: __init__.py  cli.py  jsut.py  jvs.py
modules/data_engineering/catalog/: __init__.py  cli.py
modules/data_engineering/common/: __init__.py  audio.py  catalog.py  duckdb_client.py  ids.py  io.py  paths.py  phonemes.py  s3.py  spark.py  unity_catalog.py
modules/data_engineering/gold/: __init__.py  cli.py  jsut.py  jvs.py  multi.py  segments.py
modules/data_engineering/ingest/: __init__.py  cli.py  upload.py
modules/data_engineering/pipelines/: __init__.py  build_dataset.py  cli.py  refresh_gold.py
modules/data_engineering/silver/: __init__.py  cli.py  common.py  jsut.py  jvs.py  segments.py
modules/forge/: __init__.py
modules/forge/archive/: __init__.py  safety.py  tar.py  zip.py
modules/forge/cache/: __init__.py  manager.py  manifest.py
modules/forge/models/: __init__.py  mlflow.py
modules/forge/query/: __init__.py  duckdb.py  spark.py
modules/forge/secrets/: __init__.py  vault.py
modules/forge/sql/: __init__.py  filters.py
modules/forge/storage/: __init__.py  protocols.py  s3.py
modules/labeler/: __init__.py  heuristic.py
modules/labeler/app/: __init__.py  backend.py  data.py
modules/labeler/common/: __init__.py  label_schema.py  validators.py
modules/labeler/pipelines/: __init__.py  pull_batch.py  write_labels.py
modules/registry/: __init__.py  cli.py  config.py  lineage.py  models.py  tracking.py
modules/training/: __init__.py
modules/training/audio/: __init__.py  features.py  vocoder.py
modules/training/common/: __init__.py  checkpoints.py  (+9 more)
scripts/: __init__.py  cli.py  de_bronze.sh  de_build_dataset.sh  de_gold.sh  de_ingest.sh  de_silver.sh  download_jsut.sh  label_commit.sh  label_pull.sh  notify.sh  registry.sh  run_with_notify.sh  synth.sh  train.sh  train_cache.sh  verify_setup.py
src/preprocessing/: audio.py  japanese_text.py
tests/: test_filters.py
tests/forge/: test_archive_safety.py  test_archive_tar.py  test_archive_zip.py  test_cache_manager.py  test_cache_manifest.py  test_filters.py  test_models_mlflow.py  test_query_duckdb.py  test_query_spark.py  test_secrets_vault.py  test_storage_protocols.py  test_storage_s3.py
tests/training/: test_eval_html.py  test_gan_controller.py
(+88 files in other folders)
