[project]
name = "koe-tts"
version = "0.1.0"
description = "Japanese Text-to-Speech model training and inference"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "pyopenjtalk>=0.3.0",
    "fugashi>=1.3.0",
    "unidic-lite>=1.0.8",
    "jaconv>=0.3.0",
    "datasets>=2.14.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "tensorboard>=2.14.0",
    "matplotlib>=3.7.0",
    "pytest>=7.0.0",
]
serve = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
